configs/internal/kitchenowl/configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchenowl-backend
  labels:
    app.kubernetes.io/name: kitchenowl
    app.kubernetes.io/component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kitchenowl
      app.kubernetes.io/component: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kitchenowl
        app.kubernetes.io/component: backend
    spec:
      containers:
      - name: kitchenowl
        image: tombursch/kitchenowl-backend:v0.7.7
        ports:
        - containerPort: 5000
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: kitchenowl-data

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchenowl-web
  labels:
    app.kubernetes.io/name: kitchenowl
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kitchenowl
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kitchenowl
        app.kubernetes.io/component: web
    spec:
      containers:
      - name: kitchenowl-web
        image: tombursch/kitchenowl-web:v0.7.7
        ports:
        - containerPort: 80
          name: http
