configs/internal/kitchenowl/configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitchenowl-backend
  labels:
    app.kubernetes.io/name: kitchenowl
    app.kubernetes.io/component: backend
spec:
  selector:
    app.kubernetes.io/name: kitchenowl
    app.kubernetes.io/component: backend
  ports:
  - port: 5000
    targetPort: http
    name: http

---

apiVersion: v1
kind: Service
metadata:
  name: kitchenowl-web
  labels:
    app.kubernetes.io/name: kitchenowl
    app.kubernetes.io/component: web
spec:
  selector:
    app.kubernetes.io/name: kitchenowl
    app.kubernetes.io/component: web
  ports:
  - port: 80
    targetPort: http
    name: http
